DeveloperOrg/force-app/main/default/objects/Customer_Type__c/Customer_Type__c.object-meta.xml
<CustomObject>
    <label>Customer Type</label>
    <nameField>
        <label>Customer_Type  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer_Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>