DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/customer_Email__c.field-meta.xml
<CustomField>
    <fullName>customer_Email__c</fullName>
    <label>customer Email</label>
    <type>Email</type>
</CustomField>