DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/customer_location__c.field-meta.xml
<CustomField>
    <fullName>customer_location__c</fullName>
    <label>customer location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>