DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/customer_phone_number__c.field-meta.xml
<CustomField>
    <fullName>customer_phone_number__c</fullName>
    <label>customer phone number</label>
    <type>Phone</type>
</CustomField>