DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/Diactive__c.field-meta.xml
<CustomField>
    <fullName>Diactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diactive</label>
    <type>Checkbox</type>
</CustomField>