DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/India__c.field-meta.xml
<CustomField>
    <fullName>India__c</fullName>
    <label>India</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>