DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <label>PAN Number</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>