DeveloperOrg/force-app/main/default/objects/Customer_Type__c/fields/X12th__c.field-meta.xml
<CustomField>
    <fullName>X12th__c</fullName>
    <label>12th %</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>