DeveloperOrg/force-app/main/default/objects/Customer_Type__c/validationRules/phohe.validationRule-meta.xml
<ValidationRule>
    <fullName>phohe</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(customer_phone_number__c )||
 LEN(customer_phone_number__c) &lt;&gt; 10</errorConditionFormula>
    <errorMessage>There is 10 number for phone</errorMessage>
</ValidationRule>